[package]
authors = ["Dorus Janssens <dorus.janssens@gmail.com>"] 
default-run = "server" # Specify default binary to run with `cargo run`
edition = "2021" 
name = "spreader-rs" 
version = "0.1.0" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Add binaries
[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "client"
path = "src/bin/client.rs"

[dependencies]

# Runtime
tokio = {version = "1.31.0", features = ["full"]}

# Streams
tokio-stream = {version = "0.1.14", features = ["full"]}

# WS
tokio-tungstenite = {version = "0.20.0", features = ["rustls", "rustls-native-certs", "rustls-tls-native-roots"]}

# Aysnc
futures = "0.3.28"

# GPRC & Protobuf
prost = "0.11.9"
tonic = {version = "0.9.2", features = ["gzip"]}

# CLI
clap = {version = "4.3.11", features = ["derive", "color", "suggestions"]}

# Serialization / Deserialization
serde = {version = "1.0.183", features = ["derive"]}
serde-this-or-that = "0.4.2"
serde_json = "1.0.104"

# Time
time = {version = "0.3.23", features = ["macros", "serde", "parsing", "formatting"]}

# Logging & Tracing
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-test = "0.2.4"

# Error handling
anyhow = "1.0.72"
async-trait = "0.1.73"
flume = "0.11.0"

[build-dependencies]
tonic-build = "0.9"
